[package]
name = "advent2020"
version = "0.1.0"
authors = ["Michael Droogleever Fortuyn <droogmic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
indicatif = "0.15"
itertools = "0.9.0"
recap = "0.1"
regex = "1"
serde = "1"
lazy_static = "1"
structopt = "0.3.5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark_day1"
harness = false

[[bench]]
name = "benchmark_day_13"
harness = false
